# backspace

./: .gitignore  AGENTS.md  DESIGN_SYSTEM.md  INVENTORY_SYSTEM.md  README.md  REFACTOR_IMPROVEMENTS.md  app.go  app_test.go  biome.jsonc  biome_errors.txt  biome_errors_full.txt  bts.jsonc  eslint.config.js  go.mod  go.sum  index.html  lefthook.yml  lint_output.txt  main.go  opencode.json  package-lock.json  package.json  payment_test.go  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  project_summary.txt  setup-mcp.md  skills-lock.json  tailwind.config.js  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts  wails.json
.codex/: config.toml
.github/workflows/: test.yml
.kiro/: plan.md
docs/: ANALYSIS_REPORT.md  ERP_DESIGN.md  PRD.md  customer-form-refactor.md  design-system.md  fulldoc.md
frontend/: .biomerc.json  .gitignore  biome.json  biome.jsonc  package-lock.json  package.json  package.json.md5  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts  vitest.config.ts
product-plan-legacy/: README.md  product-overview.md
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20240101000000_init_schema.sql
src-tauri/src/: background.rs  database.rs  error.rs  lib.rs
src-tauri/src/commands/: customers.rs  inventory.rs  invoices.rs  mod.rs  reports.rs  resources.rs  sessions.rs  settings.rs  subscriptions.rs
src-tauri/src/validation/: common.rs  egyptian_phone.rs  email.rs  mod.rs
(+504 files in other folders)
